--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -569,11 +569,45 @@ block content
                             +e.box(style="background-image: url(https://bk-invent.ru/uploads/images/articles/mmas321_12.jpg)")
                         +e.item 
                             +e.box
-                        +e.item.blog__item_big
+                        +e.item
                             +e.box(style="background-image: url(https://bk-invent.ru/uploads/images/articles/842231121.jpg)")
                                 +e.title Для чего мы используем телеинспекцию и что это такое?
                                 +e.data 12 января 2021 г.
                                 +e.docviews 65
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
+                        +e.item
+                            +e.box
                         +e.item
                             +e.box
 
@@ -1965,7 +1999,7 @@ block content
                                 +e({tag: 'a'}).link на обработку персональных данных
 
     .fixed_blur
-    +scripts(['common.js', 'app.js'])
+    +scripts(['common.js', 'app.js', 'articles.js'])
     |<script type="text/javascript" > (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js", "ym"); ym(53737453, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/53737453" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     |<script>(function(w, d, s, h, id) { w.roistatProjectId = id; w.roistatHost = h; var p = d.location.protocol == "https:" ? "https://" : "http://"; var u = /^.*roistat_visit=[^;]+(.*)?$/.test(d.cookie) ? "/dist/module.js" : "/api/site/1.0/"+id+"/init"; var js = d.createElement(s); js.charset="UTF-8"; js.async = 1; js.src = p+h+u; var js2 = d.getElementsByTagName(s)[0]; js2.parentNode.insertBefore(js, js2);})(window, document, 'script', 'cloud.roistat.com', 'd146057ffd124300f00ff5e37179672c');</script>
 
