--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -553,7 +553,7 @@ block content
 
 
                 section.container
-                    +b.slider
+                    +b.slider.slider_type_cases
                         +e.wrapper
                             //- +e.next
                             //- +e.prev
@@ -566,6 +566,35 @@ block content
                                             .col.col_size_12.col_size-sm_12.col_size-md_6.col_size-lg_6
                                                 |1234
                                 +e.item
+                                    +e.body
+                                        +e.title Прокладка водоснабжения г. Ростов-на-Дону, л. Республиканская, 181
+                                        +e.text Повседневная практика показывает, что сложившаяся структура организации требуют от нас анализа модели развития. Разнообразный и богатый опыт укрепление и развитие структуры способствует подготовки и реализации систем массового участия.
+                                +e.item
+                                    +e.body 3
+                                +e.item
+                                    +e.body 4
+                                +e.item
+                                    +e.body 5
+                                +e.item
+                                    +e.body 6
+                                +e.item
+                                    +e.body 7
+
+                                    section.container
+                    +b.slider.slider_type_objects
+                        +e.wrapper
+                            //- +e.next
+                            //- +e.prev
+                            +e.items
+                                +e.item
+                                    +e.body
+                                        .row 
+                                            .col.col_size_12.col_size-sm_12.col_size-md_6.col_size-lg_6
+                                                img(src="https://info-tses.kz/wp-content/uploads/2019/10/D_x-f9IXkAIpKdo-600x400.jpg")
+                                            .col.col_size_12.col_size-sm_12.col_size-md_6.col_size-lg_6
+                                                +e.title Прокладка водоснабжения г. Ростов-на-Дону, л. Республиканская, 181
+                                                +e.text Повседневная практика показывает, что сложившаяся структура организации требуют от нас анализа модели развития. Разнообразный и богатый опыт укрепление и развитие структуры способствует подготовки и реализации систем массового участия.
+                                +e.item
                                     +e.body 2
                                 +e.item
                                     +e.body 3
@@ -577,6 +606,7 @@ block content
                                     +e.body 6
                                 +e.item
                                     +e.body 7
+
 
 
                 section.container
