--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -4296,3 +4296,73 @@ blog_size($n)
             transform rotate(-45deg)
             top 24px
             right 10px
+
+.price-per-day
+
+    position relative
+    width 100%
+    @media (min-width 1290px)
+        height 50px
+   
+    // @media (min-width 700px)
+    //     position relative
+    // &__close
+    //     cursor pointer
+    //     position absolute
+    //     left -10px
+    //     top -15px
+    //     display block
+    //     border-radius 50%
+    //     box-shadow 0px 4px 10px 0px rgba(73,73,73,0.4)
+    //     width 25px
+    //     height 25px
+    //     background #4274d6
+    //     &:before
+    //     &:after
+    //         transition transform 0ms 0ms
+    //         content ''
+    //         position absolute
+    //         width 12px
+    //         height 2px
+    //         background #fff
+    //         left calc(50% - 6px)
+    //         top calc(50% - 1px)
+    //     &:before
+    //         transform rotate(-45deg)
+    //     &:after
+    //         transform rotate(45deg)
+
+    &__text
+        font-size 18px
+        line-height 1.3em
+
+    &__btn
+        font-size 16px
+        background #00000026
+        display inline-block
+        padding 3px 10px
+        margin-top 5px
+        border-radius 50px
+
+    &__wrapper
+        text-align center
+        z-index 100 
+        background #ddd
+        cursor pointer
+        display table
+        padding 15px 20px 
+        border-radius 50px
+        margin 30px auto 10px auto
+        color #fff
+        text-shadow 0 1px 10px #00000080
+        background-image: linear-gradient( 135deg, #97ABFF 10%, #123597 100%);
+        @media (min-width 1290px)
+            box-shadow 0 0 10px 5px #b1b1b140
+            position absolute
+            left calc(100% - 140px)
+            bottom -20px
+            width 200px
+            // height 100px
+            border-radius 80px
+            display block
+            padding 10px 25px 
